--- a/tweeter-analytics/package.json
+++ b/tweeter-analytics/package.json
@@ -17,6 +17,7 @@
     "@progress/kendo-react-pdf": "^2.7.1",
     "@progress/kendo-react-ripple": "^2.7.1",
     "@progress/kendo-theme-material": "^2.3.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap-4-grid": "^2.4.1",
     "express": "^4.17.1",
@@ -26,7 +27,9 @@
     "morgan": "^1.9.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.1.3",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
