--- a/frontend_combined_withUser/package.json
+++ b/frontend_combined_withUser/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@babel/core": "7.3.4",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@material-ui/core": "latest",
+    "@material-ui/lab": "latest",
     "array-move": "^2.2.0",
     "axios": "^0.18.0",
     "babel-eslint": "10.0.3",
@@ -33,6 +35,11 @@
     "postcss-loader": "3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap4-modal": "^1.7.4",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "6.0.1",
@@ -51,13 +58,7 @@
     "rimraf": "2.6.3",
     "sha1": "^1.1.1",
     "style-loader": "0.23.1",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-bootstrap-table": "^4.3.1",
-    "react-bootstrap-table2-editor": "^1.4.0",
-    "react-bootstrap4-modal": "^1.7.4",
-    "twitter-bootstrap": "2.1.1",
-    "@material-ui/lab": "latest",
-    "@material-ui/core": "latest"
+    "twitter-bootstrap": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
