Submission of bookmark UI, profile UI, integrated UI components, individual tweet view

--- a/frontend_combined_withUser/package.json
+++ b/frontend_combined_withUser/package.json
@@ -34,6 +34,16 @@
     "popper.js": "^1.15.0",
     "postcss-loader": "3.0.0",
     "prop-types": "^15.7.2",
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-buttons": "^3.9.0",
+    "@progress/kendo-react-charts": "^3.9.0",
+    "@progress/kendo-react-dialogs": "^3.9.0",
+    "@progress/kendo-react-inputs": "^3.9.0",
+    "@progress/kendo-react-intl": "^3.9.0",
+    "@progress/kendo-react-pdf": "^3.9.0",
+    "@progress/kendo-react-ripple": "^3.9.0",
+    "@progress/kendo-theme-material": "^3.6.0",
+    "bootstrap-4-grid": "^3.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-bootstrap-table": "^4.3.1",
